mod: uncomment test

--- a/twitch-chat-bot/views/join.html
+++ b/twitch-chat-bot/views/join.html
@@ -18,7 +18,7 @@
 <body>
     <div class="text-center">
         <img src="/images/twitch_logo.svg" alt="" class="mx-auto mt-5 mb-5">
-        <form action="/connect" method="get">
+        <form action="/api/connect" method="get">
             <input type="hidden" name="code" value="<%= code %>">
             <input type="hidden" name="channel" value="<%= channel %>">
             <input type="submit" value="CONNECT CHANNEL" class="btn rounded px-4 py-3   ">
